...
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fNY-2G-PIz">
                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="21"/>
                                <state key="normal" title="Add Class"/>
                                <connections>
                                    <action selector="addClassPressed:" destination="CQA-Aa-hri" eventType="touchUpInside" id="It1-GH-G1e"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sau-9j-WJg">
                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
...
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="addClass" destination="fNY-2G-PIz" id="kW9-fD-P6o"/>
                        <outlet property="colorStack" destination="f5v-8Y-8SI" id="KWG-qh-iC7"/>
                        <outlet property="coursesStack" destination="baT-6h-Ya1" id="Yc1-RU-lA9"/>
                        <outlet property="deleteStack" destination="6qh-bc-j5r" id="tiH-FI-Mun"/>
                        <outlet property="numberOfClasses" destination="dsl-Z8-idg" id="FDB-t6-PZG"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="EIR-Tn-oU4" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2218.5" y="1318"/>
        </scene>
...
                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="40" id="KUb-1U-t1g"/>
                                        <constraint firstAttribute="width" constant="128" id="O6U-n4-gUm"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                    <state key="normal" title="Create Class">
                                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                    </state>
                                    <userDefinedRuntimeAttributes>
                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                            <real key="value" value="18"/>
                                        </userDefinedRuntimeAttribute>
...
